# koda-agent

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fibonacci.py  pyproject.toml  requirements.txt  test_fibonacci.py
.github/workflows/: ci.yml
configs/: default.yaml
dashboard/: app.py
scripts/: run.py
src/: __init__.py  config.py
src/agent/: loop.py  planner.py  router.py
src/cache/: task_cache.py
src/code/: parser.py  repo_map.py  symbols.py
src/cost/: tracker.py
src/critic/: evaluator.py  verifier.py
src/llm/: client.py  models.py
src/memory/: consolidation.py  episodic.py  semantic.py  working.py
src/tools/: base.py  code.py  filesystem.py  git.py  registry.py  search.py  shell.py
src/trace/: collector.py  models.py
tests/: conftest.py  test_config.py  test_consolidation.py  test_cost_tracker.py  test_evaluator.py  test_llm_client.py  test_loop.py  test_memory.py  test_parser.py  test_planner.py  test_registry.py  test_repo_map.py  test_router.py  test_task_cache.py  test_tools.py  test_trace.py  test_verifier.py
twitter_clone/: README.md  app.py  run.py  test_app.py
twitter_clone/templates/: base.html  home.html  login.html  profile.html  register.html
